--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-.bg{background-image:url(https://wallpaperaccess.com/download/1080p-13189);background-size:cover;background-repeat:no-repeat;background-position:center;height:100%}html,body{margin:0;height:100%}
+.bg{background-image:url(https://drive.google.com/uc?id=1jx1J2Wvk9nwUEiRobXAXJb4xTbJBKsAt&export=download);background-size:cover;background-repeat:no-repeat;background-position:center;height:100%}html,body{margin:0;height:100%}
